[package]
name = "pcf857x"
version = "0.3.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/pcf857x-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the PCF8574, PCF8574A and PCF8575 I/O expanders."
readme = "README.md"
keywords = ["io", "expander", "i2c", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/pcf857x-rs"
documentation = "https://docs.rs/pcf857x"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[dependencies]
embedded-hal = "0.2.3"

[dev-dependencies]
linux-embedded-hal = "0.2"
embedded-hal-mock = "0.4"

[profile.release]
lto = true

[features]
default = ["unproven"]
unproven = ["embedded-hal/unproven"]
